--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
       <section id="portfolio" class="two">
         <div class="container">
           <header>
-            <h2>Portfolio</h2>
+            <h2>Portafolio</h2>
           </header>
           <div class="row">
             <div class="col-4 col-12-mobile">
