--- a/index.html
+++ b/index.html
@@ -222,13 +222,13 @@
 
           <p>
             De las leyes a Developer.<br />
-            Si, migrante Venezolano como muchos, pero con un deseo ferviente de
+            Sí, migrante Venezolano como muchos, pero con un deseo ferviente de
             superación, abogado de profesión, diseñador gráfico por decisión,
-            área que me dio los primeros pasos al mundo digital en mi país.
+            área que me dió los primeros pasos al mundo digital en mi país.
             Siempre en busca de nuevos retos y desafíos llegué a Argentina, aquí
             me encontré con grandes oportunidades, dónde pude enlazar mi interés
             por el arte digital y la capacidad de crear, descubriendo en tierras
-            lejanas a las que conocía,mi verdadera vocación y lo que realmente
+            lejanas mi verdadera vocación y lo que realmente
             me apasiona: la Programación
           </p>
 
@@ -248,7 +248,7 @@
       <section id="contact" class="four">
         <div class="container">
           <header>
-            <h2>Educacion</h2>
+            <h2>Educación</h2>
           </header>
           <a href="#" class="image featured"
             ><img src="images/pic11.jpg" alt=""
