--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </li>
             <li>
               <a href="#portfolio" id="portfolio-link"
-                ><span class="icon solid fa-th">Portfolio</span></a
+                ><span class="icon solid fa-th">Portafolio</span></a
               >
             </li>
             <li>
