--- a/index.html
+++ b/index.html
@@ -226,10 +226,10 @@
             superación, abogado de profesión, diseñador gráfico por decisión,
             área que me dió los primeros pasos al mundo digital en mi país.
             Siempre en busca de nuevos retos y desafíos llegué a Argentina, aquí
-            me encontré con grandes oportunidades, dónde pude enlazar mi interés
-            por el arte digital y la capacidad de crear, descubriendo en tierras
+            me encontré con grandes oportunidades, donde pude enlazar mi interés
+            por el arte digital y la capacidad de crear. Descubriendo en tierras
             lejanas mi verdadera vocación y lo que realmente
-            me apasiona: la Programación
+            me apasiona: la Programación.
           </p>
 
           <a href="#" class="image featured"
