--- a/index.html
+++ b/index.html
@@ -222,14 +222,14 @@
 
           <p>
             De las leyes a Developer.<br />
-            Sí, migrante Venezolano como muchos, pero con un deseo ferviente de
-            superación, abogado de profesión, diseñador gráfico por decisión,
-            área que me dió los primeros pasos al mundo digital en mi país.
-            Siempre en busca de nuevos retos y desafíos llegué a Argentina, aquí
-            me encontré con grandes oportunidades, donde pude enlazar mi interés
+            Entusiasta de la vida, con un deseo ferviente de
+            superación y aprendizaje constante. Abogado de profesión, diseñador gráfico por decisión,
+            área que me abrió las puertas y me dió los primeros pasos al enorme mundo digital.
+            Siempre en busca de nuevos retos y desafíos llegué a Argentina, donde
+            me encontré con grandes oportunidades, pudiendo enlazar mi interés
             por el arte digital y la capacidad de crear. Descubriendo en tierras
-            lejanas mi verdadera vocación y lo que realmente
-            me apasiona: la Programación.
+            lejanas mi verdadera vocación y lo que se convertiria
+            en mi pasión: la Programación.
           </p>
 
           <a href="#" class="image featured"
