--- a/index.html
+++ b/index.html
@@ -221,15 +221,11 @@
           </header>
 
           <p>
-            De las leyes a Developer.<br />
-            Sí, migrante Venezolano como muchos, pero con un deseo ferviente de
-            superación, abogado de profesión, diseñador gráfico por decisión,
-            área que me dió los primeros pasos al mundo digital en mi país.
-            Siempre en busca de nuevos retos y desafíos llegué a Argentina, aquí
-            me encontré con grandes oportunidades, dónde pude enlazar mi interés
-            por el arte digital y la capacidad de crear, descubriendo en tierras
-            lejanas mi verdadera vocación y lo que realmente
-            me apasiona: la Programación
+            ¡Pasión por Javascript y metodologías ágiles!<br/>
+            En lo que más destaco es en desarrollar software para clientes, con altos niveles de comunicación y trabajo en equipo.<br/>
+            Mi objetivo es administrar los servicios con calidad, innovando y desarrollando tecnología de punta, 
+            utilizando múltiples herramientas y recursos para contribuir al éxito de mi empleador, siendo mi experiencia y mi 
+            educación un baluarte para alcanzar mis metas y desafíos.
           </p>
 
           <a href="#" class="image featured"
